# DRez

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
Assets/Shaders/: ShaderIO.slang  Shaders.json  Utils.slang  blit.json  blit.slang  deferred.json  deferred.slang  forward.json  forward.slang  gbuffer.json  gbuffer.slang  mipmap.json  mipmap.slang  shadow.json  shadow.slang  skybox.json  skybox.slang  taa.json  taa.slang  test.json  test.slang
Assets/Shaders/ShaderIO/: CMakeLists.txt  global_io.slang  resources_io.slang  shader_io.h
Assets/Shaders/Utils/: utils_attribute.slang  utils_general.slang  utils_pbr.slang  utils_shadow.slang
Core/: CMakeLists.txt
Core/DX/: DXApp.cpp  DXApp.h  DXBuffer.cpp  DXBuffer.h  DXComputePipeline.cpp  DXComputePipeline.h  DXDebug.cpp  DXDebug.h  DXGraphicsPipeline.cpp  DXGraphicsPipeline.h  DXPipelineConfig.cpp  DXPipelineConfig.h  DXShaderResourceView.cpp  DXShaderResourceView.h  DXTexture.cpp  DXTexture.h  DXTimestamps.cpp  DXTimestamps.h  DXUnorderedAccessView.cpp  DXUnorderedAccessView.h  DXUtils.cpp  DXUtils.h  VertexFormats.cpp  VertexFormats.h
Core/Rendering/: BlitPass.cpp  BlitPass.h  Camera.cpp  Camera.h  DeferredPass.cpp  DeferredPass.h  GbufferPass.cpp  GbufferPass.h  Pass.cpp  Pass.h  Renderer.cpp  Renderer.h  ShadowPass.cpp  ShadowPass.h  SkyboxPass.cpp  SkyboxPass.h  TaaPass.cpp  TaaPass.h
Core/Resources/: Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h
Core/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h
Core/Window/: Window.cpp  Window.h
Dependencies/: CMakeLists.txt
Utils/: CMakeLists.txt  Singleton.h  Utils.cpp  Utils.h
Utils/Debug/: Debug.h
Utils/Files/: FileSystem.cpp  FileSystem.h  GltfLoader.cpp  GltfLoader.h  JsonFile.h
Utils/ThreadPool/: ThreadPool.cpp  ThreadPool.h
